# darth-ui

./: Cargo.toml  index.html  tailwind.config.js  tailwind.css
src/: main.rs
src/components/: mod.rs  tailwindcss.rs
src/components/avatar/: avatar.rs
src/components/button/: button.rs  mod.rs
src/components/container/: container.rs  mod.rs
src/components/examples/: mod.rs
src/components/examples/form/: mod.rs  register.rs
src/components/form/: email.rs  form.rs  label.rs  mod.rs  password.rs  text.rs
src/components/form/components/: text.rs
src/components/form/functions/: label_reset_styles.rs  mod.rs
src/components/icons/: icon.rs  icons.rs  mod.rs
src/components/img/: image.rs
src/components/toast/: body.rs  case.rs  mod.rs  progress.rs  title.rs  toast.rs
styles/: box.css  button.css  container.css  input.css  main.css  toast.css
