[package]
name = "darth-ui"
version = "0.1.1"
edition = "2021"
description = "darth-ui"
authors = ["Pas2Rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/darth-ui"
repository = "https://github.com/pas2rust/darth-ui"
license = "MIT"
exclude = [
    "tests/*",
    "tests",
]

[package.metadata.scripts]
dev = "cargo fmt && cargo clippy && tailwindcss -i ./styles/main.css -o ./tailwind.css && trunk serve --open"
deploy = "cargo fmt && cargo package && cargo publish"
clean = "cargo clean && rm -rf target && rm -rf dist && rm tailwind.css && rm -rf node_modules"

[dependencies]
darth-rust = "4.2.0"
js-sys = "0.3.69"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
regex = {version = "1.10.4", optional = true}

[features]
default = ["examples"]
form = ["regex"]
button = []
container = []
icons = []
examples = ["form", "container", "button", "icons"]
