[package]
name = "darth-ui"
version = "0.2.0"
edition = "2021"
description = "darth-ui"
authors = ["Pas2Rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/darth-ui"
repository = "https://github.com/pas2rust/darth-ui"
license = "MIT"
exclude = [
    "tests/*",
    "tests",
]

[package.metadata.scripts]
dev = "cargo fmt && cargo clippy && tailwindcss -i ./styles/main.css -o ./tailwind.css && trunk serve --open"
deploy = "cargo fmt && cargo package && cargo publish"
clean = "cargo clean && rm -rf target && rm -rf dist && rm tailwind.css && rm -rf node_modules"

[dependencies]
darth-rust = "4.3.1"
js-sys = "0.3.69"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
regex = {version = "1.10.5", optional = true}

[features]
default = ["examples"]
form = ["regex", "input-text"]
input-text = []
input-password = []
input-email = []
button = []
container = []
icons = []
examples = ["form", "container", "button", "icons", "input-text", "input-password", "input-email"]
